tests/semantic_cases/invalid/duplicate_var_decl.ob0
(* INVALID: variable name is redeclared in the same declaration scope *)
MODULE Main;
VAR x, x: INTEGER;
BEGIN
END Main.
